weblate/static/style-dark.css
/* ... */
.comment-content blockquote {
  border-left-color: #404448;
}
.comment-source {
  background-color: #371c25;
}
.comment-resolved {
  background-color: #1a1d1e;
  color: #d5d0c7;
}
.btn-float {
  background-color: #1a1d1e;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
}
kbd {
  border-color: #484d50;
  box-shadow: none;
}
.zen-unit:nth-child(2n) {
  background-color: #1e2122;
}
.zen-unit .list-group-item {
  border-color: #484d50;
}
.stripe-odd {
  background-color: #1e2122;
}
.history .list-group-item {
  background-color: inherit;
}
.badge-warning {
  background-color: #796034;
}
.badge-danger {
  background-color: #ac2109;
}
.invalid-format {
  text-decoration-color: currentcolor;
}
.clickable-row:hover {
  background-color: #282b2c;
}
.nav-pills > li > a,
.btn-default {
  color: #6cf8d8;
}
.nav-pills > li > a {
  border-color: transparent;
}
.nav-pills > .active > a,
.nav > .active > a:hover {
  border-color: #887f70;
}
.nav-pills > li > a:hover,
.nav-pills > li > a:focus,
.nav-pills .open > a,
.nav-pills .open > a:hover,
.nav-pills .open > a:focus {
  border-color: #3b4043;
}
.btn-default:hover,
.nav-pills > li > a:hover,
.nav-pills > li > a:focus,
.nav-pills .open > a,
.nav-pills .open > a:hover,
.nav-pills .open > a:focus {
  color: #ddd9d1;
  background-color: rgba(0, 0, 0, 0);
  background-image: none;
}
.bread-icon path,
.profile-icon circle,
.profile-icon path {
  fill: #d5d0c7;
}
.breadcrumb a {
  color: #d9d3cc !important;
}
.badge.length,
.badge.license {
  color: #fffdfa;
  background-color: #404548;
}
.table > thead > tr > th {
  border-bottom-color: #484d50;
}
.table-listing,
.table-listing > thead > tr > th,
.table-listing > tbody > tr > th,
.table-listing > tbody > tr > td {
  border-color: currentcolor;
}
.btn-primary,
.btn-warning,
.btn-danger,
.btn-info {
  border-color: currentcolor;
}
.btn-info {
  border-color: #24a286;
}
.btn-link.btn-xs {
  border-color: currentcolor;
}
.navbar a path {
  fill: #d5d0c7;
}
.navbar .navbar-brand:focus path,
.navbar .navbar-brand:active path,
.navbar a:hover path {
  fill: #4eeac9;
}
.navbar .open a path,
.navbar .open a:hover path {
  fill: #fffdfa;
}
.btn-link path {
  fill: #d9d3cc;
}
.btn-link:hover path {
  fill: #6cf8d8;
}
.green path,
.btn-default path {
  fill: #6cf8d8;
}
.btn-default:hover path,
.green.btn-link:hover path {
  fill: #ddd9d1;
}
.btn-primary path,
.btn-warning path,
.btn-info path {
  fill: #fffdfa;
}
button.green:hover path,
a.green:hover path {
  fill: #d9d3cc;
}
.red path {
  fill: #ff7559;
}
.grey path {
  fill: #3c4240;
}
.card-header .doc-link path {
  fill: #d9d3cc;
}
button.red:hover path,
a.red:hover path {
  fill: #ff5534;
}
.search-icon path {
  fill: #6cf8d8;
}
.btn-warning:hover {
  background-color: #218f77;
}
.btn-primary:hover {
  background-color: #25303b;
}
.btn-info:hover {
  background-color: #29b396;
  color: #fffdfa;
}
.btn-group-settings a {
  color: #d9d3cc;
}
.btn-group-settings a:hover {
  color: #6cf8d8;
}
.source-info .list-group-item {
  border-color: #3b4043;
}
.check-dismissed {
  color: #d5d0c7;
}
.check-dismissed .red path,
.gray path {
  fill: #d5d0c7;
}
.object-link,
.object-link a {
  color: #d9d3cc;
}
.source-info th,
.source-info td {
  border-color: currentcolor !important;
}
.format-item {
  background-color: #124437;
  color: #fffdfa;
}
a.format-item:hover {
  color: #fffdfa;
}
.format-item span {
  color: #fffdfa;
  background-color: #1c8f75;
}
.access-control-disabled {
  color: #c4bdb2;
}
.label-navy {
  background-color: #001c37;
}
.label-blue {
  background-color: #0066bf;
}
.label-aqua {
  background-color: #00658d;
  color: #fffdfa;
}
.label-teal {
  background-color: #2dafaf;
}
.label-olive {
  background-color: #368663;
}
.label-green {
  background-color: #29b338;
}
.label-lime {
  background-color: #00df82;
  color: #fffdfa;
}
.label-yellow {
  background-color: #a89100;
  color: #fffdfa;
}
.label-orange {
  background-color: #cf6000;
}
.label-red {
  background-color: #bd0a00;
}
.label-maroon {
  background-color: #751242;
}
.label-fuchsia {
  background-color: #d10da5;
}
.label-purple {
  background-color: #9c0bb1;
}
.label-black {
  background-color: #0e0f0f;
}
.label-gray {
  background-color: #4f5659;
}
.label-silver {
  background-color: #2f3436;
  color: #fffdfa;
}
.btn-navy path {
  fill: #e9e5df;
}
.btn-blue path {
  fill: #51c2ff;
}
.btn-aqua path {
  fill: #7dedff;
}
.btn-teal path {
  fill: #54e6e6;
}
.btn-olive path {
  fill: #7adaaf;
}
.btn-green path {
  fill: #4eea60;
}
.btn-lime path {
  fill: #1dff8b;
}
.btn-yellow path {
  fill: #fff61d;
}
.btn-orange path {
  fill: #ff9c30;
}
.btn-red path {
  fill: #ff5145;
}
.btn-maroon path {
  fill: #ff82bf;
}
.btn-fuchsia path {
  fill: #ff2dd8;
}
.btn-purple path {
  fill: #f249ff;
}
.btn-black path {
  fill: #f3f0eb;
}
.btn-gray path {
  fill: #c4bdb2;
}
.btn-silver path {
  fill: #d0c9c1;
}
input.color_edit:checked + label {
  border-color: #9a8f7f;
}
.help-block {
  color: #d9d3cc;
}
a.language:visited,
a.language {
  color: #d8d2ca;
}
a.language:hover {
  color: #6cf8d8;
  text-decoration-color: currentcolor;
}
.tribute-container > .dropdown-menu > li.highlight > a {
  color: #e5e0da;
  text-decoration-color: currentcolor;
  background-color: #282b2c;
}
.editor-wrap {
  border-color: currentcolor;
}
.editor-wrap > textarea,
.editor-wrap > .highlighted-output {
  border-color: #444b4d;
  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px inset;
}
.editor-wrap > textarea.form-control[readonly],
.editor-wrap > textarea {
  color: transparent;
  caret-color: #fffdfa;
  background-color: transparent;
}
.editor-wrap > .highlighted-output.readonly {
  background-color: #25282a;
}
.token.bold {
  color: #fffdfa;
}
.token.italic {
  color: #ada396;
}
.token.code {
  color: #7bb4ff;
}
.token.comment,
.token.block-comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #afa598;
}
.token.punctuation {
  color: #bbb3a7;
}
/* ... */

